# generic_singleton

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs  static_anymap.rs  thread_local_static_anymap.rs
